Add `SchedulerPythonExecutor`